@@ -73,6 +73,8 @@ Selector-cleanup branch
 
   * Modifying classes (addMethods and friends)
 
+- Classes now have an ``__isMetaClass__`` attribute. This is ``True`` for
+  meta classes and ``False`` otherwise.
 
 Version 1.3.7 (????-??-??)
 --------------------------
